@@ -32,6 +32,8 @@ Release 2.7.0 - UNRELEASED
     HDFS-7659. truncate should check negative value of the new length.
     (Yi Liu via shv)
 
+    HDFS-7676. Fix TestFileTruncate to avoid bug of HDFS-7611. (shv)
+
 Release 2.6.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
